[Fix]: Fix header security on Swagger
